adjusted spacing issues on mobile device

--- a/src/components/Body/HomeBody.css
+++ b/src/components/Body/HomeBody.css
@@ -186,31 +186,27 @@ body {
 
 	#Home-Body {
 		display: grid;
-		grid-template-rows: 1fr .75fr;
+		grid-template-rows: 1fr .1fr;
 		grid-template-columns: 1fr;
 	}
 
 	#Home-Overview {
 		display: grid;
 		grid-template-rows: 1fr .10fr;
-		justify-items: center;
-		justify-content: space-evenly;
-		align-content: center;
-		/* justify-content: space-evenly;
-		align-content: center;
-		align-items: center; */
 		padding-bottom: 5%;
 		grid-row: 2/3;
 		grid-column: 1/2;
-		width: 95%;
-		height: 95%;
+		width: 100%;
+		height: 100%;
+
+		justify-content: center;
 	}
 
 	#Home-Body #Home-HeadShot {
 		width: 60%;
-		justify-content: space-evenly;
-		justify-items: center;
-		width: 95%;
+		/* justify-content: space-evenly;
+		justify-items: center; */
+		width: 100%;
 		grid-row: 1/2;
 		grid-column: 1/2;
 	}
